--- a/HolaUsuario/app/src/main/res/values/strings.xml
+++ b/HolaUsuario/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="nombre">Escribe tu nombre</string>
+    <string name="texto">Escribe tus datos</string>
     <string name="app_name">HolaUsuario</string>
 </resources>
